# riscy_emu

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
inc/: cpu.hpp  decode.hpp  instructions.hpp  typedefs.hpp
src/: cpu.cpp  decode.cpp  instructions.cpp  main.cpp
